--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -43,6 +43,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/event_title"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences"
                 android:layout_below="@id/activity_add_event_top" />
 
             <EditText
@@ -50,6 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/event_desc"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@+id/sb_event_name" />
 
             <EditText
@@ -57,6 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/event_characters"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@+id/sb_event" />
 
             <EditText
@@ -64,6 +70,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/event_summary"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@+id/sb_event_characters" />
 
             <EditText
@@ -71,6 +79,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/event_notes"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences|textMultiLine"
                 android:layout_below="@id/sb_event_summary" />
         </RelativeLayout>
     </ScrollView>
