--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -9,25 +9,38 @@
     android:orientation="vertical"
     tools:context="tahastudio.storybuilder.ShowStory">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:theme="@style/Tabs"
+    <HorizontalScrollView
+        android:id="@+id/tab_layout_scroll"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+        android:fillViewport="true"
+        android:scrollbars="none">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:theme="@style/Tabs"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+    </HorizontalScrollView>
 
-    <TextView
-        android:id="@+id/story_title"
+    <RelativeLayout
+        android:id="@+id/story_title_layout"
         android:theme="@style/TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:layout_below="@id/tab_layout" />
+        android:layout_below="@id/tab_layout_scroll">
+
+        <TextView
+            android:id="@+id/story_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="15dp" />
+    </RelativeLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/story_title" />
+        android:layout_below="@id/story_title_layout" />
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
