--- a/app/src/main/res/layout/tab_view.xml
+++ b/app/src/main/res/layout/tab_view.xml
@@ -21,6 +21,12 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/element_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <TextView
                 android:id="@+id/name_info"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
