--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -7,111 +7,137 @@
     android:layout_height="match_parent"
     tools:context=".StoryBuilderMain">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:id="@+id/developer_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/developer_header"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="20dp" />
-
-        <ImageView
-            android:id="@+id/tahastudio"
-            android:layout_width="100dp"
-            android:layout_height="121dp"
-            android:src="@drawable/tahastudio"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/developer_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/developer_email"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/version"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingRight="30dp"
-            android:paddingLeft="30dp"
-            android:text="@string/open_source"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/credit_header"
-            android:id="@+id/credit_header"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="40dp"
-            android:paddingBottom="20dp"/>
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp"
-            android:paddingBottom="10dp">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
 
             <TextView
-                android:id="@+id/fab_credit"
+                android:id="@+id/developer_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/fab_credit" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/developer_header"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="20dp" />
+
+            <ImageView
+                android:id="@+id/tahastudio"
+                android:layout_width="100dp"
+                android:layout_height="121dp"
+                android:src="@drawable/tahastudio"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
-                android:id="@+id/icon_credit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/icons_credit"
-                android:gravity="bottom|end" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp">
-
-            <TextView
-                android:id="@+id/fab_author"
+                android:id="@+id/developer_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/fab_author_name"
-                android:linksClickable="true" />
+                android:text="@string/developer_email"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
-                android:id="@+id/icons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/version"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingRight="30dp"
+                android:paddingLeft="30dp"
+                android:text="@string/open_source"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/credit_header"
+                android:id="@+id/credit_header"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="40dp"
+                android:paddingBottom="20dp"/>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:id="@+id/fab_credit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/fab_credit" />
+
+                <TextView
+                    android:id="@+id/icon_credit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/icons_credit"
+                    android:gravity="bottom|end" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp">
+
+                <TextView
+                    android:id="@+id/fab_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/fab_author_name"
+                    android:linksClickable="true" />
+
+                <TextView
+                    android:id="@+id/icons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/icons"
+                    android:gravity="end"
+                    android:linksClickable="true" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/icons"
-                android:gravity="end"
-                android:linksClickable="true" />
+                android:paddingTop="30dp"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/assets_credit"/>
+
+                <TextView
+                    android:id="@+id/assets_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/assets_author"/>
+            </LinearLayout>
+
         </LinearLayout>
-
-    </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
