--- a/app/src/main/res/values/quotes.xml
+++ b/app/src/main/res/values/quotes.xml
@@ -192,7 +192,7 @@
         <item>"The story I am writing exists, written in absolutely perfect fashion, some place, in the air. All I must do is find it, and copy it." ― Jules Renard</item>
         <item>"Writing in English is like throwing mud at a wall." ― Joseph Conrad</item>
         <item>"All the stories I would like to write persecute me. When I am in my chamber, it seems as if they are all around me, like little devils, and while one tugs at my ear, another tweaks my nose, and each says to me, 'Sir, write me, I am beautiful.'" ― Umberto Eco</item>
-        <item>"When writing goes painfully, when it's hideously difficult, and one feels real despair (ah, the despair, silly as it is, is real!)–then naturally one ought to continue with the work; it would be cowardly to retreat. But when writing goes smoothly – why then one certainly should keep on working, since it would be stupid to stop. Consequently one is always writing or should be writing." ― Joyce Carol Oates</item>
+        <item>"When writing goes painfully, when it's hideously difficult, and one feels real despair (ah, the despair, silly as it is, is real!)–then naturally one ought to continue with the work; it would be cowardly to retreat." ― Joyce Carol Oates</item>
         <item>"You can't put much on paper before you betray your secret self, try as you will to keep things civil." ― Patricia Hampl</item>
         <item>"If the storytellers told it true, all stories would end in death." ― George Pelecanos</item>
         <item>"Never put off writing until you are better at it." ― Gary Henderson</item>
