--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -12,10 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/story_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:listSelector="@drawable/big_card_list"
         android:layout_below="@id/quote" />
 
